--- a/Jeff_101718.ipynb
+++ b/Jeff_101718.ipynb
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x18b9594d0b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e308e8c1d0>"
       ]
      },
      "execution_count": 17,
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        " (83.0)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        " 82.0]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1546,16 +1546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(62.0, 69.15384615384616, 77.0)]"
+       "<sqlalchemy.orm.query.Query at 0x1e30a569e80>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,36 +1565,70 @@
     "def daily_normals(date):\n",
     "     \n",
     "    sel3 = [func.min(Mmt.tobs), func.avg(Mmt.tobs), func.max(Mmt.tobs)]\n",
-    "    return session.query(*sel3).filter(func.strftime(\"%m-%d\", Mmt.date) == date).all()\n",
+    "    return session.query(*sel3).filter(func.strftime(\"%m-%d\", Mmt.date) == date).distinct()\n",
     "    \n",
     "daily_normals(\"01-01\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2012-03-05', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-03-04', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-03-03', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-03-02', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-03-01', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-02-29', 53.0, 73.09795396419437, 87.0),\n",
+       " ('2012-02-28', 53.0, 73.09795396419437, 87.0)]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# calculate the daily normals for your trip\n",
     "# push each tuple of calculations into a list called `normals`\n",
-    "\n",
     "# Set the start and end date of the trip\n",
-    "\n",
     "# Use the start and end date to create a range of dates\n",
-    "\n",
     "# Stip off the year and save a list of %m-%d strings\n",
-    "\n",
-    "# Loop through the list of %m-%d strings and calculate the normals for each date\n"
+    "# Loop through the list of %m-%d strings and calculate the normals for each date\n",
+    "lstnormals=[]\n",
+    "stdte = func.strftime(\"%Y-%m-%d\",'2012-02-28')\n",
+    "enddte = func.strftime(\"%Y-%m-%d\",'2012-03-05') \n",
+    "tripdates=session.query(Mmt.date).\\\n",
+    "        filter(Mmt.date >= stdte).filter(Mmt.date <= enddte).order_by(Mmt.date.desc()).distinct()\n",
+    "for dt in tripdates:\n",
+    "    appitm = daily_normals(func.strftime(\"%m-%d\",Mmt.date))[0]\n",
+    "    lstnormals.append(dt+appitm)\n",
+    "lstnormals  \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-82-2205c936d562>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-82-2205c936d562>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    triptdf = pd.DataFrame(index=lstnormals[0], columns=lstnormals[1],lstnormals[2],lstnormals[3])\u001b[0m\n\u001b[1;37m                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index\n"
+    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index\n",
+    "triptdf = pd.DataFrame(index=lstnormals[0], columns=('Date'\n",
+    "tripdflstnormals[1],lstnormals[2],lstnormals[3]"
    ]
   },
   {
